# ai-delivery-multiagent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  IBM.docx  Makefile  README.md  REPOSITORY_WALKTHROUGH.ipynb  TODO.md  pyproject.toml
.github/workflows/: ci.yml  generated-app-ci.yml
configs/: models.yaml  settings.yaml
configs/clients/: demo_brand.yaml
docs/: architecture.md  c4-component.md  c4-container.md  c4-context.md  demo-script.md  hackathon_pitch_beamer.tex  hackathon_report.tex
docs/decisions/: 0001-langgraph.md  0002-python.md  0003-snowflake-llm.md
inputs/: sample_context.json  sample_spec.md
prompts/agents/: architect.txt  developer.txt  qa_devops.txt  reviewer.txt  spec_analyst.txt
prompts/shared/: coding_rules.txt  output_contracts.txt  system_common.txt
prompts/tasks/: analyze_input.txt  design_architecture.txt  generate_backend.txt  generate_c4.txt  generate_cicd.txt  generate_frontend.txt  generate_tests.txt
scripts/: bootstrap.sh  clean_workspace.sh  export_traces.py  run_demo.sh
src/ai_delivery/: __init__.py  api.py  cli.py  logging_config.py  main.py  settings.py  state.py
src/ai_delivery/agents/: architect.py  developer.py  qa_devops.py  reviewer.py  (+1 more)
tests/fixtures/: sample_plan.json  sample_spec.md
tests/integration/: test_c4_generation.py  test_codegen_pipeline.py  test_end_to_end_dry_run.py  test_interactive_session.py
tests/unit/: test_git_tools.py  test_graph_builder.py  test_input_parser.py  test_prompt_loader.py  test_settings.py  test_state.py
workspace/generated_app/: README.md
(+59 files in other folders)
